--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ori portfolio</title>
+</head>
+<body>
+  <h1>ori's portfolio</h1> 
+  <h2>I'm a web developer</h2> 
+    <hr>
+  <h3><a href="./public/movie-ranking.html">movie ranking project</a></h3>
+  <img src="./assets/images/Image 16-01-2025 at 22.18.jpg "height=200 alt="movie ranking project">
+  <h3><a href="./public/birthday-invite.html">birthday invite project</a></h3>
+</body><img src="./assets/images/Image 16-01-2025 at 22.12.jpg"height=200>
+<hr>
+<a href="./public/about.html">about me</a>   <br>
+<a href="./public/contact.html">contact me</a>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
