--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
+<p>Tel: 0504422566</p>
+<p>Email: ori.007sez@gmail.com</p>
+<p>Address: hateena </p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  233<br />
+  tzafaria<br />
+  israel <br />
 </p>
